[gd_scene load_steps=98 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/muzzle_flash.tscn" type="PackedScene" id=2]
[ext_resource path="res://data/images/player/player1.png" type="Texture" id=3]
[ext_resource path="res://data/images/player/player11_25.png" type="Texture" id=4]
[ext_resource path="res://data/images/player/player22_5.png" type="Texture" id=5]
[ext_resource path="res://data/images/player/player33_75.png" type="Texture" id=6]
[ext_resource path="res://data/images/player/player45.png" type="Texture" id=7]
[ext_resource path="res://data/images/player/player56_25.png" type="Texture" id=8]
[ext_resource path="res://data/images/player/player67_5.png" type="Texture" id=9]
[ext_resource path="res://data/images/player/player78_75.png" type="Texture" id=10]
[ext_resource path="res://data/images/player/player90.png" type="Texture" id=11]
[ext_resource path="res://data/images/player/player96.png" type="Texture" id=12]
[ext_resource path="res://data/images/player/player101_25.png" type="Texture" id=13]
[ext_resource path="res://data/images/player/player107.png" type="Texture" id=14]
[ext_resource path="res://data/images/player/player112_5.png" type="Texture" id=15]
[ext_resource path="res://data/images/player/player118.png" type="Texture" id=16]
[ext_resource path="res://data/images/player/player128.png" type="Texture" id=17]
[ext_resource path="res://data/images/player/player135.png" type="Texture" id=18]
[ext_resource path="res://data/images/player/player140.png" type="Texture" id=19]
[ext_resource path="res://data/images/player/player148.png" type="Texture" id=20]
[ext_resource path="res://data/images/player/player157_5.png" type="Texture" id=21]
[ext_resource path="res://data/images/player/player164.png" type="Texture" id=22]
[ext_resource path="res://data/images/player/player168.png" type="Texture" id=23]
[ext_resource path="res://data/images/player/player175.png" type="Texture" id=24]
[ext_resource path="res://data/images/player/playerneg135.png" type="Texture" id=25]
[ext_resource path="res://data/images/player/playerneg128.png" type="Texture" id=26]
[ext_resource path="res://data/images/player/playerneg119.png" type="Texture" id=27]
[ext_resource path="res://data/images/player/playerneg112_5.png" type="Texture" id=28]
[ext_resource path="res://data/images/player/playerneg103.png" type="Texture" id=29]
[ext_resource path="res://data/images/player/playerneg97.png" type="Texture" id=30]
[ext_resource path="res://data/images/player/playerneg90.png" type="Texture" id=31]
[ext_resource path="res://data/images/player/playerneg80.png" type="Texture" id=32]
[ext_resource path="res://data/images/player/playerneg70.png" type="Texture" id=33]
[ext_resource path="res://data/images/player/playerneg67_5.png" type="Texture" id=34]
[ext_resource path="res://data/images/player/playerneg56_5.png" type="Texture" id=35]
[ext_resource path="res://data/images/player/playerneg45.png" type="Texture" id=36]
[ext_resource path="res://data/images/player/playerneg37_5.png" type="Texture" id=37]
[ext_resource path="res://data/images/player/playerneg30.png" type="Texture" id=38]
[ext_resource path="res://data/images/player/playerneg22_5.png" type="Texture" id=39]
[ext_resource path="res://data/images/player/playerneg15.png" type="Texture" id=40]
[ext_resource path="res://data/images/player/playerneg07_5.png" type="Texture" id=41]
[ext_resource path="res://data/images/player/player_reload1.png" type="Texture" id=42]
[ext_resource path="res://data/images/player/player_reload2.png" type="Texture" id=43]
[ext_resource path="res://data/images/player/player_reload3.png" type="Texture" id=44]
[ext_resource path="res://data/images/player/player_reload4.png" type="Texture" id=45]
[ext_resource path="res://data/images/player/player_reload5.png" type="Texture" id=46]
[ext_resource path="res://data/images/player/player_evasive.png" type="Texture" id=47]
[ext_resource path="res://data/images/player_pistol/player1.png" type="Texture" id=48]
[ext_resource path="res://data/images/player_pistol/player11_25.png" type="Texture" id=49]
[ext_resource path="res://data/images/player_pistol/player22_5.png" type="Texture" id=50]
[ext_resource path="res://data/images/player_pistol/player33_75.png" type="Texture" id=51]
[ext_resource path="res://data/images/player_pistol/player45.png" type="Texture" id=52]
[ext_resource path="res://data/images/player_pistol/player56_25.png" type="Texture" id=53]
[ext_resource path="res://data/images/player_pistol/player67_5.png" type="Texture" id=54]
[ext_resource path="res://data/images/player_pistol/player78_75.png" type="Texture" id=55]
[ext_resource path="res://data/images/player_pistol/player90.png" type="Texture" id=56]
[ext_resource path="res://data/images/player_pistol/player96.png" type="Texture" id=57]
[ext_resource path="res://data/images/player_pistol/player101_25.png" type="Texture" id=58]
[ext_resource path="res://data/images/player_pistol/player107.png" type="Texture" id=59]
[ext_resource path="res://data/images/player_pistol/player112_5.png" type="Texture" id=60]
[ext_resource path="res://data/images/player_pistol/player118.png" type="Texture" id=61]
[ext_resource path="res://data/images/player_pistol/player128.png" type="Texture" id=62]
[ext_resource path="res://data/images/player_pistol/player148.png" type="Texture" id=63]
[ext_resource path="res://data/images/player_pistol/player135.png" type="Texture" id=64]
[ext_resource path="res://data/images/player_pistol/player140.png" type="Texture" id=65]
[ext_resource path="res://data/images/player_pistol/player157_5.png" type="Texture" id=66]
[ext_resource path="res://data/images/player_pistol/player164.png" type="Texture" id=67]
[ext_resource path="res://data/images/player_pistol/player168.png" type="Texture" id=68]
[ext_resource path="res://data/images/player_pistol/player175.png" type="Texture" id=69]
[ext_resource path="res://data/images/player_pistol/playerneg135.png" type="Texture" id=70]
[ext_resource path="res://data/images/player_pistol/playerneg128.png" type="Texture" id=71]
[ext_resource path="res://data/images/player_pistol/playerneg119.png" type="Texture" id=72]
[ext_resource path="res://data/images/player_pistol/playerneg112_5.png" type="Texture" id=73]
[ext_resource path="res://data/images/player_pistol/playerneg103.png" type="Texture" id=74]
[ext_resource path="res://data/images/player_pistol/playerneg97.png" type="Texture" id=75]
[ext_resource path="res://data/images/player_pistol/playerneg90.png" type="Texture" id=76]
[ext_resource path="res://data/images/player_pistol/playerneg80.png" type="Texture" id=77]
[ext_resource path="res://data/images/player_pistol/playerneg70.png" type="Texture" id=78]
[ext_resource path="res://data/images/player_pistol/playerneg67_5.png" type="Texture" id=79]
[ext_resource path="res://data/images/player_pistol/playerneg56_5.png" type="Texture" id=80]
[ext_resource path="res://data/images/player_pistol/playerneg45.png" type="Texture" id=81]
[ext_resource path="res://data/images/player_pistol/playerneg37_5.png" type="Texture" id=82]
[ext_resource path="res://data/images/player_pistol/playerneg30.png" type="Texture" id=83]
[ext_resource path="res://data/images/player_pistol/playerneg22_5.png" type="Texture" id=84]
[ext_resource path="res://data/images/player_pistol/playerneg15.png" type="Texture" id=85]
[ext_resource path="res://data/images/player_pistol/playerneg07_5.png" type="Texture" id=86]
[ext_resource path="res://data/images/player_pistol/player_reload1.png" type="Texture" id=87]
[ext_resource path="res://data/images/player_pistol/player_reload2.png" type="Texture" id=88]
[ext_resource path="res://data/images/player_pistol/player_reload3.png" type="Texture" id=89]
[ext_resource path="res://data/images/player_pistol/player_reload4.png" type="Texture" id=90]
[ext_resource path="res://data/images/player_pistol/player_reload5.png" type="Texture" id=91]
[ext_resource path="res://data/images/player_pistol/player_evasive.png" type="Texture" id=92]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ), ExtResource( 92 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ) ],
"loop": false,
"name": "default",
"speed": 2.2
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ) ],
"loop": false,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 7, -10, 16, 3, 16, 11, -16, 11, -16, 3, -7, -10 )

[node name="player" type="KinematicBody2D"]
position = Vector2( 626.87, 363.083 )
input_pickable = true
script = ExtResource( 1 )
muzzle_flash1 = ExtResource( 2 )

[node name="current_frame" type="AnimatedSprite" parent="."]
position = Vector2( 3.55823, -8.06558 )
frames = SubResource( 2 )
frame = 37
offset = Vector2( -12, -10 )

[node name="current_frame2" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -8.40869, -18.0672 )
frames = SubResource( 3 )
frame = 5

[node name="reload_AR_anim" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -10.8632, -16.9126 )
frames = SubResource( 4 )

[node name="reload_pistol_anim" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -9.80719, -17.2915 )
frames = SubResource( 5 )

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 7.02466, -13.9639 )
scale = Vector2( 1, 1.28886 )
shape = SubResource( 1 )

[node name="pos0" type="Position2D" parent="."]
position = Vector2( -8.47302, 41.37 )

[node name="pos1" type="Position2D" parent="."]
position = Vector2( -18.1843, 41.4311 )

[node name="pos2" type="Position2D" parent="."]
position = Vector2( -29.6622, 40.5683 )

[node name="pos3" type="Position2D" parent="."]
position = Vector2( -37.6588, 37.7404 )

[node name="pos4" type="Position2D" parent="."]
position = Vector2( -45.62, 30.747 )

[node name="pos5" type="Position2D" parent="."]
position = Vector2( -56.6503, 22.6057 )

[node name="pos6" type="Position2D" parent="."]
position = Vector2( -60.4258, 11.865 )

[node name="pos7" type="Position2D" parent="."]
position = Vector2( -62.8607, 4.61487 )

[node name="pos8" type="Position2D" parent="."]
position = Vector2( -64.182, -5.935 )

[node name="pos9" type="Position2D" parent="."]
position = Vector2( -63.1502, -13.7731 )

[node name="pos10" type="Position2D" parent="."]
position = Vector2( -63.5878, -20.1431 )

[node name="pos11" type="Position2D" parent="."]
position = Vector2( -63.1663, -26.6321 )

[node name="pos12" type="Position2D" parent="."]
position = Vector2( -61.6517, -33.7067 )

[node name="pos13" type="Position2D" parent="."]
position = Vector2( -59.3287, -39.2428 )

[node name="pos14" type="Position2D" parent="."]
position = Vector2( -53.9097, -47.2592 )

[node name="pos15" type="Position2D" parent="."]
position = Vector2( -44.755, -54.469 )

[node name="pos16" type="Position2D" parent="."]
position = Vector2( -39.4727, -63.7979 )

[node name="pos17" type="Position2D" parent="."]
position = Vector2( -33.0544, -67.3966 )

[node name="pos18" type="Position2D" parent="."]
position = Vector2( -26.1119, -69.9642 )

[node name="pos19" type="Position2D" parent="."]
position = Vector2( -18.8882, -73.6211 )

[node name="pos20" type="Position2D" parent="."]
position = Vector2( -11.3759, -75.9821 )

[node name="pos21" type="Position2D" parent="."]
position = Vector2( -4.10901, -76.725 )

[node name="pos22" type="Position2D" parent="."]
position = Vector2( 39.303, -29.204 )

[node name="pos23" type="Position2D" parent="."]
position = Vector2( 42.6165, -25.5699 )

[node name="pos24" type="Position2D" parent="."]
position = Vector2( 44.2771, -21.8769 )

[node name="pos25" type="Position2D" parent="."]
position = Vector2( 45.8206, -15.1397 )

[node name="pos26" type="Position2D" parent="."]
position = Vector2( 46.5799, -10.258 )

[node name="pos27" type="Position2D" parent="."]
position = Vector2( 47.7313, -4.71033 )

[node name="pos28" type="Position2D" parent="."]
position = Vector2( 45.483, 0.914001 )

[node name="pos29" type="Position2D" parent="."]
position = Vector2( 45.8472, 6.3851 )

[node name="pos30" type="Position2D" parent="."]
position = Vector2( 45.2191, 13.7123 )

[node name="pos31" type="Position2D" parent="."]
position = Vector2( 41.6265, 18.9847 )
scale = Vector2( 1.00421, 0.893573 )

[node name="pos32" type="Position2D" parent="."]
position = Vector2( 35.7985, 24.703 )

[node name="pos33" type="Position2D" parent="."]
position = Vector2( 29.2462, 28.0267 )
scale = Vector2( 1.00421, 0.893573 )

[node name="pos34" type="Position2D" parent="."]
position = Vector2( 24.4937, 32.5536 )

[node name="pos35" type="Position2D" parent="."]
position = Vector2( 20.2239, 36.5491 )
scale = Vector2( 1.00421, 0.893573 )

[node name="pos36" type="Position2D" parent="."]
position = Vector2( 13.9216, 37.578 )

[node name="pos37" type="Position2D" parent="."]
position = Vector2( 6.32135, 38.5352 )
scale = Vector2( 1.00421, 0.893573 )

[node name="pos38" type="Position2D" parent="."]
position = Vector2( -1.15143, 41.1369 )

[node name="bullet_container" type="Node" parent="."]

[node name="AR_timer" type="Timer" parent="."]
wait_time = 0.12
one_shot = true

[node name="pistol_timer" type="Timer" parent="."]
one_shot = true

[node name="bleeding_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="dodge_cooldown" type="Timer" parent="."]
one_shot = true

[node name="grunt_timer" type="Timer" parent="."]
one_shot = true

[node name="gun_sounds" type="Node" parent="."]

[node name="pistol_sound" type="Node" parent="."]

[node name="player_sounds" type="Node" parent="."]

[node name="reload_AR_sound" type="Node" parent="."]

[node name="reload_pistol_sound" type="Node" parent="."]

[node name="shoot_ray" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 1000 )

[node name="reticule" type="Particles2D" parent="shoot_ray"]
position = Vector2( 0, 277.13 )
scale = Vector2( 5, 5 )
